add putCells function to Grid

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="js/game.js"></script>
 <script type="text/javascript">
 
-  var game = new GameCanvas('game-screen', 800, 800, 0.3);
+  var game = new GameCanvas('game-screen', 800, 800);
   setInterval(function () {
     game.step();
   }, 100);
